k8s/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee
  template:
    metadata:
      labels:
        app: journee
    spec:
      imagePullSecrets:
      - name: gcr-pull-secret
      containers:
      - name: journee
        image: gcr.io/my-docker-471807/journee:latest
        ports:
        - containerPort: 3000
