k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee
spec:
  selector:
    app: journee
  ports:
  - port: 80
    targetPort: 3000
