k8s/manifests/auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-auth
  namespace: journee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: journee-auth
  template:
    metadata:
      labels:
        app: journee-auth
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-auth
          image: gcr.io/my-docker-471807/journee:v2.6.5
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: journee-auth
  namespace: journee
spec:
  selector:
    app: journee-auth
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journee-auth-ingress
  namespace: journee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: auth.preview.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: journee-auth
            port:
              number: 80
