k8s/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journee-ingress
  namespace: journee
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: journee-dev.aooba.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: journee-dev
            port:
              number: 80
